Fixed status box being hidden under the title bar

--- a/pyramid_game_title.css
+++ b/pyramid_game_title.css
@@ -138,6 +138,7 @@
 	transition: top 0.5s, left 0.5s;
 	text-align: center;
 	vertical-align: middle;
+	z-index: 10;
 }
 
 #statusBoxStatus
